--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,15 +11,15 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hs-text">
-                            <h2><span>Music</span> for everyone.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                            <a href="#" class="site-btn">Download Now</a>
-                            <a href="#" class="site-btn sb-c2">Start free trial</a>
+                            <h2><span>{{ gericht1.name }}</span>!</h2>
+                            <p>Probieren sie heute {{ gericht1.beschreibung }} für {{ gericht1.preis }} Euro!</p>
+                            <a href="{{ path('menu') }}" class="site-btn">Menükarte</a>
+                            <a href="#" class="site-btn sb-c2">Bestellen</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hr-img">
-                            <img src="{{asset('img/hero-bg.png')}}" alt="">
+                            <img src="{{asset('bilder/' ~ gericht1.bild)}}">
                         </div>
                     </div>
                 </div>
@@ -30,15 +30,15 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hs-text">
-                            <h2><span>Listen </span> to new music.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
-                            <a href="#" class="site-btn">Download Now</a>
-                            <a href="#" class="site-btn sb-c2">Start free trial</a>
+                            <h2><span>{{ gericht2.name }}</span>!</h2>
+                            <p>Probieren sie heute {{ gericht2.beschreibung }} für {{ gericht2.preis }} Euro!</p>
+                            <a href="{{ path('menu') }}" class="site-btn">Menükarte</a>
+                            <a href="#" class="site-btn sb-c2">Bestellen</a>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hr-img">
-                            <img src="{{asset('img/hero-bg.png')}}" alt="">
+                            <img src="{{asset('bilder/' ~ gericht2.bild)}}">
                         </div>
                     </div>
                 </div>
