--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>SolMusic | HTML Template</title>
+    <title>Menükarte</title>
     <meta charset="UTF-8">
     <meta name="description" content="SolMusic HTML Template">
     <meta name="keywords" content="music, html">
@@ -37,7 +37,7 @@
 
 <!-- Header section -->
 <header class="header-section clearfix">
-    <a href="index.html" class="site-logo">
+    <a href="{{ path('home') }}" class="site-logo">
         <img src="{{asset('img/logo.png')}}" alt="">
     </a>
     <div class="header-right">
@@ -53,14 +53,14 @@
     <ul class="main-menu">
         <li><a href="{{ path('home') }}">Willkommen</a></li>
         <li><a href="{{ path('menu') }}">Menükarte</a></li>
-        <li><a href="blog.html">News</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="{{ path('bestellung') }}">Bestellung</a></li>
+        <li><a href="{{ path('mail') }}">Kellner</a></li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
         <li><a href="#">Mitarbeiter</a>
             <ul class="sub-menu">
                 <li><a href="{{ path('gericht.bearbeiten') }}">Gerichte</a></li>
                 <li><a href="{{ path('gericht.anlegen') }}">Anlegen</a></li>
-                <li><a href="artist.html">Artist</a></li>
+                <li><a href="{{ path('bestellung') }}">Bestellung</a></li>
                 <li><a href="{{ path('reg') }}">Registrieren</a></li>
                 <li><a href="{{ path('app_logout') }}">Logout</a></li>
             </ul>
@@ -149,6 +149,8 @@
 <!-- Footer section end -->
 
 <!--====== Javascripts & Jquery ======-->
+<script src="{{asset('https://code.jquery.com/jquery-3.2.1.slim.min.js')}}" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="{{asset('https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js')}}" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="{{asset('js/jquery-3.2.1.min.js')}}"></script>
 <script src="{{asset('js/bootstrap.min.js')}}"></script>
 <script src="{{asset('js/jquery.slicknav.min.js')}}"></script>
